@@ -1,7 +1,7 @@
 package io.github.karstenspang.mockjdbc;
 
 import java.sql.SQLException;
-import java.util.Arrays;
+import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -14,7 +14,7 @@ public class ProgramTest {
     {
         SQLException myex=new SQLException("my exception");
         ExceptionStep step=new ExceptionStep(myex);
-        Program program=new Program(Arrays.asList(step));
+        Program program=new Program(List.of(step));
         program.toString();
         assertInstanceOf(ExceptionStep.class,program.get());
         assertInstanceOf(PassThruStep.class,program.get());
